_src/_includes/_assets/css/core.css
/* ... */
.input-dropdown {
  width: 56%;
}

.check {
  padding: 5px 0;
}

.field-title {
  padding-bottom: 5px;
}

canvas#generated_qr {
  max-width: 100%;
  height: unset !important;
}

#generated_qr img {
  border: 2px solid var(--orange);
  max-width: 512px;
  width: 99%;
  height: auto;
}

#generate_code {
  margin-bottom: 30px;
}

/*#searchField::placeholder {
  color: var(--light)
}*/

button#back_button, button#next_button {
  font-size: 22px;
  padding: 10px 40px;
  margin: 0 40px;
}

section#trusted_logos #trusted_container {
  margin: 0 auto;
}

#android-doc-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 40px;
  padding-top: 40px;
}

.trusted-tag {
  font-size: 18px;
  padding-top: 10px;
  font-weight: 500;
}

#vendor_logo_container {
  padding: 20px 30px;
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: auto;
  grid-auto-flow: row;
  border-radius: 5px;
  margin-top: 50px;
  grid-gap: 30px
}

.vendor-logo {
  align-self: center;
  justify-self: center;
}

.vendor-logo img {
  max-width: 100%;
  width: 116px;
  border-radius: 0;
}

#vendor_disclaimer {
  font-size: 12px;
  text-align: center;
  padding-top: 8px;
}

#post_container {
  /*padding-top: 30px;*/
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 50px;
}

#doc_container {
  /*padding-top: 30px;*/
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 30px;
}

.side-note {
  color: var(--blood-orange);
}

.meta-tag {
  text-transform: lowercase;
  color: var(--blood-orange);
}

.eleventy-plugin-youtube-embed {
  margin: 30px 0;
}

.eleventy-plugin-twitter-embed {
  margin: 30px 0;
}

.dpc-vendor b {
  display: block;
}

.dpc-vendor img {
  float: left;
  padding-right: 10px;
  border-radius: 0;
}

#dpc_extras {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-row-gap: 30px;
  padding-bottom: 30px;
}

.tag-more-link {
  padding: 20px 0;
  display: block;
  color: var(--blood-orange);
}

#support-split {
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-gap: 30px;
}

#content_report {
  float: right;
  font-size: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
}

footer {
  padding: 120px 0 0;
  text-align: center;
}

#subscribe_section {
  padding: 0 0 40px 0;
}
#subscribe_button {
  font-size: 20px;
}

#subscribe_input {
  padding: 14px;
  font-size: 20px;
}

#social_icons {
  font-size: 30px;
  display: inline;
}

#made_by {
  text-align: center;
  padding: 40px 30px 10px;
  font-size: 16px;
}

#made_by a {
  text-decoration: none;
}

#footer_logos {
  margin: 0 auto;
  max-width: 1000px;
  padding-top: 40px;
  padding-left: 30px;
  padding-right: 30px;
}

#partner_logos {
  padding: 50px 40px 0;
  overflow: hidden;
}

#partner_logos #vendor_disclaimer {
  text-align: right;
}

#footer_logos #vendor_logo_container {
  margin-top: 0;
}

#footer_logo_text {
  padding-bottom: 8px;
}

/* Content and imported styles */
/* Side notes for calling out things
-------------------------------------------------- */

.callout {
    padding: 20px;
    margin: 20px 0;
    border-radius: 5px;
    box-sizing: border-box;
    color: var(--brand-text);
    background: var(--subtle-bg);

  &.callout-orange {
      background: var(--orange);
      color: #ffffff;

    & .callout-heading::after {
      background-color: #ffffff;
    }

    & .callout-heading::before {
      content: 'work_alert';
    }

    & .callout-heading-small::after {
      background-color: #ffffff;
    }

    & code {
      color: var(--light);
    }
  }

  &.callout-blue {
    background: var(--main-blue);
    color: #ffffff;

    & .callout-heading::after {
      background-color: #ffffff;
    }

    & .callout-heading-small::after {
      background-color: #ffffff;
    }

    & code {
      color: var(--light);
    }
  }

  &.callout-red {
    background: var(--main-red);
    color: #ffffff;

    & .callout-heading::after {
      background-color: #ffffff;
    }
    
    & .callout-heading::before {
      content: 'work_alert';
    }

    & .callout-heading-small::after {
      background-color: #ffffff;
    }

    & code {
      color: var(--light);
    }
  }

  & .callout-heading {
      font-size: 30px;
      font-weight: 300;
      width: fit-content;

    &::after {
      content: '';
      height: 4px;
      display: block;
      clear: both;
      background-color: var(--text);
      border-radius: 5px;
      margin-top: 15px;
    }

    &::before {
      font-family: "Material Symbols Outlined";
      content: 'info';
      padding-right: 5px;
      font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 24;
      max-width: 40px;
      vertical-align: middle;
    }

    & .material-symbols-outlined {
      font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
      max-width: 40px;
    }
  }

  & .callout-heading-small {
    font-size: 24px;

    & .material-symbols-outlined {
      font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
      max-width: 30px;
    }

    &::after {
      content: '';
      height: 2px;
      display: block;
      clear: both;
      background-color: var(--text);
      border-radius: 5px;
      margin-top: 6px;
    }
  }

  &.callout-small {
      border: 0;
      padding: 3px;
      background: var(--dark);
      color: var(--bright);
      margin: 30px 0 0;

      & p {
        margin: 0;
        padding: 5px 10px;
    }
      & .material-symbols-outlined {
        font-size: 115%;
        padding-right: 6px;
    }
  }

  & .callout-icon-sad::before {
    content: 'sentiment_dissatisfied';
  }
  & .callout-icon-edit::before {
    content: 'edit_note';
  }
}

.heading-anchor { 
  display: none;
}

.heading-wrapper:hover .heading-anchor {
  display: unset;
}

.nav-link-individual a {
  text-decoration: none;
}

.toc ol {
  list-style-type: none; 
  padding: 0;
  margin: 0;
}

.toc ol li {
  list-style-type: none;
  padding: 5px 0
}

.toc ol li a {
  text-decoration: none;
}
/* ... */

